# Fabric-A2A

./: .env.example  .gitignore  A2A_MESSAGE_BUS_PLAN.md  ARCHITECTURE_REFACTOR.md  DELIVERY.md  DEPLOYMENT.md  Dockerfile  Enterprise_Registry_Summary.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README-Legacy.md  REFACTOR_SUMMARY.md  Redia-ACL-Config-Stuff.md  SPEC.md  TESTING_PLAYBOOK.md  TOOLS_INVENTORY.md  Tool_Summary_added_to_Fabric-A2A.md  agents.yaml  architecture.md  bak.docker-compose.yml  docker-compose.redis.yml  docker-compose.yml  example_client.py  fabric_message_bus.py  integration_guide.md  quick_test.py  requirements.txt  schemas.json  server.py  server_new.py  test-terminal-logs.md  vm-docker-compose.yml
Opus-Enhancements-Docs/: FABRIC_ENHANCEMENT_PLAN.md  SDK_README.md  fabric_a2a_sdk.py  pyproject.toml  test_endpoints.sh
Opus-Enhancements-Docs/Full-Tool-Loop/: README.md  __init__.py  memory.py  pyproject.toml
Opus-Enhancements-Docs/Full-Tool-Loop/mnt/user-data/outputs/aether-checkpoint-loop/: README.md  pyproject.toml
Opus-Enhancements-Docs/Full-Tool-Loop/mnt/user-data/outputs/aether-checkpoint-loop/aether_checkpoint/: __init__.py  engine.py  loop.py  memory.py
config/redis/: users.acl  users.acl.template-with-comments
database/: __init__.py  models.py  postgres_registry.py
database/init/: 01_init.sql
observability/: __init__.py  dashboard.py  metrics.py
sdk/clean_test/: pyvenv.cfg
sdk/python/: README.md  SPEC.md  pyproject.toml  test_sdk.py
sdk/python/examples/: quickstart.py
sdk/python/fabric_a2a/: __init__.py  agents.py  client.py  exceptions.py  messaging.py  models.py  streaming.py  tools.py
stack-ideas/: LongThread-with-important-Reidis-Valkey-JetStream-Weaviate-Postgres-Qdrant-etc.md-  MCP-Servers-addons.md  REFACTOR_SUMMARY.md
tools/: base.py  brave_search.py  builtin_tools.py  old-brave-search-method.py  registry.yaml
tools/plugins/: TEMPLATE.py  __init__.py  builtin_data.py  builtin_docs.py  builtin_encode.py  builtin_io.py  builtin_math.py  builtin_security.py  builtin_system.py  builtin_text.py  builtin_web.py
tools/plugins/custom/: README.md  webhook_notifications.py
