[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fabric-a2a"
version = "0.1.0"
description = "Python SDK for the Fabric A2A agent-to-agent communication framework"
readme = "SDK_README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "AetherPro Technologies LLC", email = "cory@aetherpro.tech" },
]
keywords = ["ai", "agents", "a2a", "mcp", "fabric", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
httpx = ["httpx>=0.25.0"]
dev = ["httpx>=0.25.0", "pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
fabric-a2a = "fabric_a2a_sdk:main"

[project.urls]
Homepage = "https://mcpfabric.space"
Documentation = "https://fabric.perceptor.us/mcp/docs"
Repository = "https://github.com/aetherpro/fabric-a2a-sdk"
