[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-a2a"
version = "0.1.0"
description = "Python SDK for Fabric Agent-to-Agent (A2A) protocol"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AetherAI"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "redis>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/aetherai/fabric-a2a"
Documentation = "https://github.com/aetherai/fabric-a2a/blob/main/sdk/python/README.md"
Repository = "https://github.com/aetherai/fabric-a2a.git"
Issues = "https://github.com/aetherai/fabric-a2a/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fabric_a2a*"]

[tool.setuptools.package-data]
fabric_a2a = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
